# NikChat

./: README.md  setup.cfg
NikChat/: __init__.py  newtraining.json  results.py  training.py
