[metadata]
name = NikChat
version = 2.3.3.2
author = Nikhil Tamvada (Nikhilodeon1)
author_email = nikhiltamvada@gmail.com
description = A full-fledged chatbot designed to be incorperated into other projects. (Speeds of 0.1 seconds)
long_description = file: README.md
long_description_content_type = text/markdown
home_page = https://github.com/Nikhilodeon1/NikChat
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
#packages = nltk, numpy, tensorflow, wikipedia, bs4, geopy, geocoder
packages = find:
python_requires = >=3.6
include_package_data = True